--- a/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -26,11 +26,11 @@
                   <Font size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="Password" layoutX="50.0" layoutY="68.0" prefWidth="500.0" promptText="Password">
+            <PasswordField layoutX="50.0" layoutY="62.0" prefWidth="500.0" promptText="Password">
                <font>
                   <Font size="18.0" />
                </font>
-            </TextField>
+            </PasswordField>
             <Button fx:id="ForgotPasswordButton" layoutX="430.0" layoutY="113.0" mnemonicParsing="false" prefWidth="120.0" text="Забыли пароль?" underline="true" />
             <Button fx:id="LogInButton" defaultButton="true" layoutX="200.0" layoutY="173.0" mnemonicParsing="false" onAction="#LogInClicked" prefHeight="50.0" prefWidth="200.0" text="Войти">
                <opaqueInsets>
