--- a/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -21,6 +22,11 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
+            <Label layoutX="50.0" layoutY="117.0" text="Аня не очень">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
             <TextField fx:id="Email" layoutX="50.0" layoutY="14.0" prefWidth="500.0" promptText="Email">
                <font>
                   <Font size="18.0" />
