--- a/serviceDesk_client/src/main/resources/views/MainScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MainScreen.fxml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <HBox prefHeight="64.0" prefWidth="1366.0" BorderPane.alignment="CENTER" />
+      <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER">
+         <children>
+            <Text fill="WHITE" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="logo" text="Service-Desk" textAlignment="CENTER" wrappingWidth="240.0">
+               <font>
+                  <Font name="System Bold Italic" size="36.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
+               <font>
+                  <Font size="36.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="navigation-menu-text" />
+                  <String fx:value="text" />
+               </styleClass>
+            </Text>
+         </children></HBox>
    </top>
-   <center>
-      <ImageView fitHeight="858.0" fitWidth="1362.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+   <bottom>
+      <ImageView fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
          <image>
             <Image url="@../img/MainScreenPlaceholder.png" />
          </image>
       </ImageView>
-   </center>
+   </bottom>
 </BorderPane>
