--- a/serviceDesk_client/src/main/resources/views/MainScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MainScreen.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -17,21 +16,17 @@
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
                <font>
                   <Font size="36.0" />
                </font>
-               <styleClass>
-                  <String fx:value="navigation-menu-text" />
-                  <String fx:value="text" />
-               </styleClass>
             </Text>
          </children></HBox>
    </top>
    <bottom>
       <ImageView fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
          <image>
-            <Image url="@../img/MainScreenPlaceholder.png" />
+            <Image url="@../images/MainScreenPlaceholder.png" />
          </image>
       </ImageView>
    </bottom>
