--- a/serviceDesk_client/src/main/resources/views/MainScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MainScreen.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MainScreenController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" styleClass="logo" text="Service-Desk" textAlignment="CENTER" wrappingWidth="240.0">
+            <Text fx:id="Logo" fill="WHITE" onMouseClicked="#OpenPlaceholderImage" styleClass="logo" text="Service-Desk" textAlignment="CENTER" wrappingWidth="240.0">
                <font>
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
+            <Text fx:id="Tickets" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
                <font>
                   <Font size="36.0" />
                </font>
@@ -24,10 +27,27 @@
          </children></HBox>
    </top>
    <bottom>
-      <ImageView fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
+      <ImageView fx:id="PlaceholderImage" fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
          <image>
             <Image url="@../images/MainScreenPlaceholder.png" />
          </image>
       </ImageView>
    </bottom>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <TableView fx:id="TicketsTable" layoutX="123.0" layoutY="60.0" maxHeight="700.0" maxWidth="1200.0" minHeight="550.0" minWidth="900.0" prefHeight="600.0" prefWidth="1120.0">
+              <columns>
+                <TableColumn fx:id="id" maxWidth="100.0" prefWidth="35.0" text="ID" />
+                <TableColumn fx:id="title" maxWidth="400.0" prefWidth="300.0" text="Тема" />
+                  <TableColumn fx:id="creator" maxWidth="250.0" minWidth="0.0" prefWidth="200.0" text="Автор" />
+                  <TableColumn fx:id="status" maxWidth="120.0" minWidth="0.0" prefWidth="120.0" text="Статус" />
+                  <TableColumn fx:id="creationDate" maxWidth="120.0" minWidth="0.0" prefWidth="120.0" text="Дата" />
+                  <TableColumn fx:id="software" maxWidth="250.0" minWidth="0.0" prefWidth="150.0" text="Название ПО" />
+                  <TableColumn fx:id="helper" maxWidth="250.0" minWidth="0.0" prefWidth="200.0" text="Исполнитель" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+   </center>
 </BorderPane>
