--- a/serviceDesk_client/src/main/resources/views/MainScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MainScreen.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -10,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MainScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MainScreenController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER">
          <children>
@@ -34,22 +36,30 @@
       </ImageView>
    </bottom>
    <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <Pane maxWidth="1366.0" minWidth="1366.0" prefHeight="704.0" prefWidth="1366.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="TicketsTable" layoutX="73.0" layoutY="60.0" maxHeight="700.0" maxWidth="1250.0" minHeight="550.0" minWidth="900.0" prefHeight="600.0" prefWidth="1220.0">
+            <Button defaultButton="true" layoutX="133.0" layoutY="40.0" mnemonicParsing="false" styleClass="main-button" text="+ Добавить обращение" textAlignment="CENTER">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Button>
+            <TableView fx:id="TicketsTable" layoutX="133.0" layoutY="100.0" maxHeight="550.0" maxWidth="1100.0" minHeight="550.0" minWidth="1100.0" prefHeight="550.0" prefWidth="1100.0">
               <columns>
                 <TableColumn fx:id="id" maxWidth="100.0" prefWidth="35.0" text="ID" />
                 <TableColumn fx:id="title" maxWidth="450.0" minWidth="100.0" prefWidth="350.0" text="Тема" />
                   <TableColumn fx:id="creator" maxWidth="250.0" minWidth="50.0" prefWidth="150.0" text="Автор" />
-                  <TableColumn fx:id="status" maxWidth="100.0" minWidth="30.0" text="Статус" />
+                  <TableColumn fx:id="status" maxWidth="120.0" minWidth="30.0" prefWidth="120.0" text="Статус" />
                   <TableColumn fx:id="category" maxWidth="100.0" minWidth="30.0" text="Тип" />
                   <TableColumn fx:id="creationDate" maxWidth="120.0" minWidth="60.0" prefWidth="120.0" text="Дата создания" />
                   <TableColumn fx:id="changeDate" maxWidth="120.0" minWidth="60.0" prefWidth="120.0" text="Дата изменения" />
                   <TableColumn fx:id="helper" maxWidth="250.0" minWidth="50.0" prefWidth="150.0" text="Исполнитель" />
-                  <TableColumn fx:id="software" maxWidth="250.0" minWidth="30.0" prefWidth="150.0" text="Название ПО" />
+                  <TableColumn fx:id="software" maxWidth="250.0" minWidth="30.0" prefWidth="100.0" text="Название ПО" />
               </columns>
             </TableView>
          </children>
+         <BorderPane.margin>
+            <Insets top="64.0" />
+         </BorderPane.margin>
       </Pane>
    </center>
 </BorderPane>
