--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -13,6 +13,22 @@
     -fx-pref-height: 50;
 }
 
+.refresh-button {
+    -fx-font-size: 16;
+    -fx-background-color: #00D0D0;
+    -fx-pref-width: 250;
+    -fx-pref-height: 50;
+}
+
+.title-text {
+    -fx-font-size: 24;
+    -fx-font-weight: bold;
+}
+
+.big-description-text {
+    -fx-font-size: 18;
+}
+
 .navigation-menu {
     -fx-background-color: #302E2E;
 }
@@ -39,4 +55,8 @@
 .navigation-menu-text:hover {
     -fx-fill: #00D29D;
     -fx-cursor: hand;
+}
+
+.choice-box {
+    -fx-font-size: 18;
 }
