Round corners on buttons!

--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -4,6 +4,9 @@
 
 .button {
     -fx-cursor: hand;
+    -fx-background-color: #20B2AA;
+    -fx-background-radius: 27;
+    -fx-text-fill: #ffffff;
 }
 
 .main-button {
