--- a/serviceDesk_client/src/main/resources/views/MainScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MainScreen.fxml
@@ -38,6 +38,7 @@
    <center>
       <Pane maxWidth="1366.0" minWidth="1366.0" prefHeight="704.0" prefWidth="1366.0" BorderPane.alignment="CENTER">
          <children>
+            <Text layoutX="133.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Список обращений" />
             <Button fx:id="CreateTicketButton" defaultButton="true" layoutX="133.0" layoutY="40.0" mnemonicParsing="false" onAction="#CreateTicketButtonClicked" styleClass="main-button" text="+ Добавить обращение" textAlignment="CENTER">
                <opaqueInsets>
                   <Insets />
