--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -16,11 +16,11 @@
     -fx-pref-height: 50;
 }
 
-.refresh-button {
+.big-button {
     -fx-font-size: 16;
     -fx-background-color: #00D0D0;
     -fx-pref-width: 250;
-    -fx-pref-height: 50;
+    -fx-pref-height: 30;
 }
 
 .title-text {
