--- a/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
@@ -3,10 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -17,31 +15,14 @@
       <AnchorPane prefHeight="605.0" prefWidth="840.0" BorderPane.alignment="CENTER">
          <children>
             <Text layoutX="293.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Создание обращения" textAlignment="CENTER" />
-            <Text layoutX="95.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тема обращения*" />
-            <TextField fx:id="TitleField" layoutX="95.0" layoutY="105.0" prefWidth="650.0" promptText="Не менее 10 символов">
+            <Text layoutX="95.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тема обращения*" />
+            <TextField fx:id="TitleField" layoutX="95.0" layoutY="135.0" prefWidth="650.0" promptText="Не менее 10 символов">
                <font>
                   <Font size="16.0" />
                </font>
             </TextField>
-            <Text layoutX="95.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тип обращения*" />
-            <RadioButton fx:id="QuestionRadioButton" layoutX="260.0" layoutY="159.0" mnemonicParsing="false" selected="true" text="Вопрос">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <toggleGroup>
-                  <ToggleGroup fx:id="category" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="ErrorRadioButton" layoutX="260.0" layoutY="187.0" mnemonicParsing="false" text="Ошибка" toggleGroup="$category">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </RadioButton>
-            <RadioButton fx:id="FeatureRadioButton" layoutX="260.0" layoutY="216.0" mnemonicParsing="false" text="Предложение функционала" toggleGroup="$category">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </RadioButton>
+            <Text layoutX="95.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тип обращения*" />
+            <ChoiceBox fx:id="CategoryBox" layoutX="95.0" layoutY="210.0" prefHeight="25.0" prefWidth="650.0" />
             <Text layoutX="95.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Наименование ПО*" />
             <ChoiceBox fx:id="SoftwareBox" layoutX="95.0" layoutY="280.0" onAction="#SoftwareBoxChanged" prefHeight="25.0" prefWidth="650.0" />
             <Text layoutX="95.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Функциональный модуль ПО" />
