--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -75,3 +75,17 @@
 .choice-box {
     -fx-font-size: 14;
 }
+
+.choice-box-error {
+    -fx-border-color: red;
+    -fx-border-width: 2;
+}
+
+.text-field {
+    -fx-font-size: 16;
+}
+
+.text-field-error {
+    -fx-border-color: red;
+    -fx-border-width: 2;
+}
