--- a/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MemberTicketsScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MemberProfileScreenController">
    <top>
       <HBox alignment="CENTER_LEFT" maxHeight="64.0" maxWidth="1366.0" minHeight="64.0" minWidth="1366.0" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -22,7 +19,7 @@
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
-            <Text fx:id="Tickets" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
+            <Text fx:id="Tickets" fill="WHITE" onMouseClicked="#TicketsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="240.0">
                <font>
                   <Font size="36.0" />
                </font>
@@ -33,9 +30,9 @@
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0" HBox.hgrow="NEVER">
                      <children>
                         <Text fx:id="MyProfile" layoutY="30.0" onMouseClicked="#MyProfileClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Мой профиль" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fitHeight="64.0" fitWidth="64.0" onMouseClicked="#MyProfileClicked" layoutX="136.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyProfileClicked" pickOnBounds="true" preserveRatio="true" styleClass="navigation-menu-image">
                            <image>
-                              <Image url="@../images/character.png"  />
+                              <Image url="@../images/character.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -43,7 +40,7 @@
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0">
                      <children>
                         <Text fx:id="MyOrganisation" layoutY="30.0" onMouseClicked="#MyOrganisationClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Моя организация" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fitHeight="64.0" fitWidth="64.0" onMouseClicked="#MyOrganisationClicked" layoutX="136.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyOrganisationClicked" pickOnBounds="true" preserveRatio="true" styleClass="navigation-menu-image">
                            <image>
                               <Image url="@../images/three-friends.png" />
                            </image>
@@ -64,27 +61,7 @@
    <center>
       <Pane maxWidth="1366.0" minWidth="1366.0" prefHeight="704.0" prefWidth="1366.0" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="133.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Список обращений" />
-            <Button fx:id="CreateTicketButton" defaultButton="true" layoutX="133.0" layoutY="40.0" mnemonicParsing="false" onAction="#CreateTicketButtonClicked" styleClass="main-button" text="+ Добавить обращение" textAlignment="CENTER">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </Button>
-            <Button fx:id="RefreshTableButton" layoutX="400.0" layoutY="45.0" mnemonicParsing="false" onAction="#RefreshTableButtonClicked" styleClass="big-button" text="Обновить данные в таблице" />
-            <Button fx:id="ChangeCreatorFilterButton" layoutX="983.0" layoutY="45.0" mnemonicParsing="false" onAction="#ChangeCreatorFilterButtonClicked" styleClass="big-button" text="Только мои обращения" />
-            <TableView fx:id="TicketsTable" layoutX="133.0" layoutY="100.0" maxHeight="550.0" maxWidth="1100.0" minHeight="550.0" minWidth="1100.0" prefHeight="550.0" prefWidth="1100.0">
-              <columns>
-                <TableColumn fx:id="id" maxWidth="100.0" prefWidth="35.0" text="ID" />
-                <TableColumn fx:id="title" maxWidth="450.0" minWidth="100.0" prefWidth="350.0" text="Тема" />
-                  <TableColumn fx:id="creator" maxWidth="250.0" minWidth="50.0" prefWidth="150.0" text="Автор" />
-                  <TableColumn fx:id="status" maxWidth="120.0" minWidth="30.0" prefWidth="120.0" text="Статус" />
-                  <TableColumn fx:id="category" maxWidth="100.0" minWidth="30.0" text="Тип" />
-                  <TableColumn fx:id="creationDate" maxWidth="120.0" minWidth="60.0" prefWidth="120.0" text="Дата создания" />
-                  <TableColumn fx:id="changeDate" maxWidth="120.0" minWidth="60.0" prefWidth="120.0" text="Дата изменения" />
-                  <TableColumn fx:id="helper" maxWidth="250.0" minWidth="50.0" prefWidth="150.0" text="Исполнитель" />
-                  <TableColumn fx:id="software" maxWidth="250.0" minWidth="30.0" prefWidth="100.0" text="Название ПО" />
-              </columns>
-            </TableView>
+            <Text layoutX="133.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
          </children>
          <BorderPane.margin>
             <Insets top="64.0" />
