--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -51,17 +53,55 @@
             </HBox>
          </children></HBox>
    </top>
-   <bottom>
-      <ImageView fx:id="PlaceholderImage" fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@../images/MainScreenPlaceholder.png" />
-         </image>
-      </ImageView>
-   </bottom>
    <center>
       <Pane maxWidth="1366.0" minWidth="1366.0" prefHeight="704.0" prefWidth="1366.0" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="133.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Просмотр обращения" />
+            <Text layoutX="172.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Просмотр обращения" />
+            <AnchorPane layoutX="172.0" layoutY="64.0" maxHeight="550.0" prefHeight="550.0" prefWidth="800.0" styleClass="pane-borders">
+               <children>
+                  <ScrollPane prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0">
+                     <content>
+                        <VBox minHeight="520.0" prefHeight="520.0" prefWidth="760.0">
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
+               </children></AnchorPane>
+            <AnchorPane layoutX="1000.0" layoutY="64.0" maxHeight="550.0" maxWidth="306.0" minWidth="306.0" prefHeight="550.0" prefWidth="306.0" styleClass="pane-borders">
+               <children>
+                  <VBox maxHeight="250.0" maxWidth="154.0" minWidth="154.0" prefHeight="250.0" prefWidth="154.0" spacing="15.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Статус" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Тип обращения" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Название ПО" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Модуль ПО" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата создания" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата изменения" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата обработки" />
+                     </children>
+                     <padding>
+                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                     </padding>
+                  </VBox>
+                  <VBox layoutX="153.0" maxHeight="250.0" maxWidth="154.0" minWidth="154.0" prefHeight="250.0" prefWidth="154.0" spacing="15.0">
+                     <padding>
+                        <Insets bottom="15.0" right="10.0" top="15.0" />
+                     </padding>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Зарегистрировано" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Открыто" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
+                     </children>
+                  </VBox>
+                  <VBox layoutY="260.0" prefHeight="250.0" prefWidth="306.0" />
+               </children>
+            </AnchorPane>
          </children>
          <BorderPane.margin>
             <Insets top="64.0" />
