--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -113,8 +113,16 @@
     -fx-text-fill: #ffffff;
 }
 
-.tab-header-background {
-    -fx-background-color:white;
+.jfx-tab-pane {
+    -fx-border-width: 2;
+    -fx-border-color: #302E2E;
+    -fx-background-radius: 5;
+    -fx-border-radius: 5;
+    -fx-text-fill: #ffffff;
+}
+
+.jfx-tab-pane .tab-header-background {
+    -fx-background-color: white;
 }
 
 .tab-pane:top *.tab-header-area {
@@ -122,6 +130,26 @@
     -fx-padding: 0.416667em 0.166667em 0.0em 0.0em;
 }
 
-.tab {
-    -fx-font-size: 20;
+.jfx-tab-pane .tab {
+    -fx-background-color: #DDDDDD;
+    -fx-fit-to-width: true; // BRED
 }
+
+.jfx-tab-pane .tab-label {
+    -fx-font-size: 20;
+    -fx-text-fill: #302E2E;
+}
+
+.jfx-tab-pane .tab-selected-line {
+    -fx-background-color: #00D29D;
+    -fx-pref-height: 3;
+}
+
+.jfx-tab-pane .tab-header-area .jfx-rippler {
+    -jfx-rippler-fill: #00D29D;
+}
+
+.jfx-tab-pane .tab:selected {
+    -fx-background-color: white;
+}
+
