--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
@@ -99,12 +99,15 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
                      </children>
                   </VBox>
-                  <VBox layoutY="260.0" prefHeight="250.0" prefWidth="306.0" />
+                  <VBox fx:id="UsersInfo" layoutY="260.0" prefHeight="250.0" prefWidth="306.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding></VBox>
                </children>
             </AnchorPane>
          </children>
          <BorderPane.margin>
-            <Insets top="64.0" />
+            <Insets />
          </BorderPane.margin>
       </Pane>
    </center>
